[gd_scene load_steps=2 format=3 uid="uid://c3ekpjcyal7cr"]

[ext_resource type="Script" path="res://ScreenNodes/CalendarNodes/add_remove_shift_panel.gd" id="1_7m3bc"]

[node name="AddRemoveShiftPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7m3bc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="M" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="SelectedShift" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "No Selected Shift"
horizontal_alignment = 1

[node name="M2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RemoveShiftButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Remove Shift from Calendar"

[node name="M3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Line" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "__________________________________________________________________"
horizontal_alignment = 1

[node name="M4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add A New Shift:"
horizontal_alignment = 1

[node name="OptionDay" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionShiftType" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionTime" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="M5" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Shift"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RemoveShiftButton" to="." method="_on_remove_shift_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionDay" to="." method="_on_option_day_item_selected"]
